# xgboost-rs

./: .gitmodules  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: booster.rs  data.csv  dmatrix.rs  error.rs  lib.rs
src/parameters/: booster.rs  learning.rs  linear.rs  mod.rs  tree.rs
xgboost-rs-sys/: Cargo.toml  README.md  build.rs  lib.rs  wrapper.h
