[package]
name = "xgboost-rs"
version = "0.1.31"
license = "MIT"
authors = ["Marcus Weber <marcus.wallau@gmail.com>"]
repository = "https://github.com/geo-engine/xgboost-rs"
description = "Bindings to dmlc/xgboost."
readme = "README.md"
keywords = ["xgboost", "machinelearning", "bindings", "boosting", "tree"]
categories = ["api-bindings", "external-ffi-bindings"]
edition = "2021"


[dependencies]
libc = "0.2"
xgboost-rs-sys = { path = "xgboost-rs-sys", version = "0.1" }
derive_builder = "0.11"
indexmap = "1.9"
tempfile = "3.1"
log = "0.4"
ndarray = "0.15"


[build-dependencies]
xgboost-rs-sys = { path = "xgboost-rs-sys", version = "0.1" }


[workspace]
members = ["xgboost-rs-sys"]
